remove `description.txt` and `depends.txt`, add options to `mod.conf`

--- a/mod.conf
+++ b/mod.conf
@@ -1,2 +1,5 @@
 name = street_signs
 min_minetest_version = 5.2.0
+description = Adds street name signs with readable text.
+depends = signs_lib
+optional_depends = default, intllib, screwdriver, infrastructure
